projects/compiler/test/typechecker/import/error_duplicate_import_name.4.out
Error at %FILE_NAME%:2:8
Duplicate name 'Color'
  |  import Color from "./_exports"
            ^
This name is also declared at (1:8)
  |  import Color from "./_exports"
            ^
